# CloudHarvestCoreTasks

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  __init__.py  base.py  meta.json  pyproject.toml  requirements.txt  setup.py  tasks.py
CloudHarvestCoreTasks/: README.md  __init__.py  __register__.py  base.py  blueprints.py  cache.py  chains.py  collectors.py  dataset.py  environment.py  exceptions.py  factories.py  filters.py  functions.py  helpers.py  meta.json  meta.py  pyproject.toml  redis.py  silos.py  tasks.py  templating.py
CloudHarvestCoreTasks/caching/: README.md  exceptions.py  persistent.py
CloudHarvestCoreTasks/chains/: __init__.py  base.py  harvest.py  report.py
CloudHarvestCoreTasks/data_model/: README.md  __init__.py  functions.py  matching.py  record.py  recordset.py
CloudHarvestCoreTasks/silos/: README.md  __init__.py  ephemeral.py  exceptions.py  heartbeat.py  persistent.py  silos.py
CloudHarvestCoreTasks/tasks/: __init__.py  base.py  chains.py  dataset.py  dummy.py  enqueue.py  error.py  exceptions.py  factories.py  file.py  harvest_update.py  http.py  json.py  mongo.py  prune.py  redis.py  sql.py  tasks.py  templating.py  wait.py
CloudHarvestCoreTasks/templating/: README.md  functions.py
CloudHarvestCoreTasks/user_filters/: README.md  __init__.py  base.py  filters.py
cloud_harvest_core_tasks/: base.py  collectors.py  exceptions.py  tasks.py
docs/: filters.md  harvest.drawio
docs/task_chains/: base.md  base_harvest.md
docs/tasks/: auger.md  base.md  base_data.md  base_task.md  dataset.md  dummy.md  enqueue.md  error.md  file.md  for_each.md  harvest_update.md  http.md  json.md  mongo.md  prune.md  recordset.md  redis.md  wait.md
docs/templates/: tasks.md
tasks/: base.py  factories.py  tasks.py
templating/: filters.py  functions.py
tests/: README.md  __init__.py  data.py  docker-compose.yaml  test_cache.py  test_dataset.py  test_environment.py  test_factories.py  test_filterabletask.py  test_filters.py  test_functions.py  test_matching.py  test_recordsets_functions.py  test_recordsets_matching.py  test_recordsets_record.py  test_recordsets_recordset.py  test_silos.py  test_tasks.py  test_tasks_RecordsetTask.py  test_tasks_base.py  test_templating_filters.py  test_templating_templates.py
tests/data/: mongo-seed.js  redis-seed.json
