[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["CloudHarvestCoreTasks", "CloudHarvestCoreTasks.*"]
include-package-data = true

[tool.setuptools.package-data]
CloudHarvestPluginAws = [
    "templates/**/*.yaml",
    "pyproject.toml",
]

[project]
authors = [ { name = "Cloud Harvest" } ]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Site Reliability Engineers",
]
description = "This module is a core component of CloudHarvest, providing essential tasks generation and execution."
license = { file = "LICENSE" }
name = "CloudHarvestCoreTasks"
readme = "README.md"
urls = { homepage = "https://github.com/Cloud-Harvest/CloudHarvestCoreTasks" }
version = "0.8.1"
